--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
     "rand-token": "^1.0.1",
+    "socket.io": "^4.5.3",
     "util": "^0.12.5"
   },
   "devDependencies": {
